--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.0-SNAPSHOT</version>
 		<relativePath /> <!-- lookup parent from repository -->
-	
-	
+
+
 	</parent>
 	<groupId>Spring.Boot.Rest.Controller</groupId>
 	<artifactId>SpringBootRestController</artifactId>
@@ -18,6 +18,9 @@
 	<description>SpringBootRestController</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<downloadSources>true</downloadSources>
+		<downloadJavadocs>true</downloadJavadocs>
+
 	</properties>
 
 	<dependencies>
@@ -25,6 +28,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -41,7 +45,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -61,6 +65,17 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-rest-hal-browser</artifactId>
 			<version>2.5.0.RELEASE</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
 	</dependencies>
