--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 management.security.enabled=false
 #logging.level.org.springframework = DEBUG
 management.endpoints.web.exposure.include=*
+management.endpoints.jmx.exposure.include=*
