--- a/pom.xml
+++ b/pom.xml
@@ -6,21 +6,26 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.0-SNAPSHOT</version>
+		<version>2.4.4</version>
 		<relativePath /> <!-- lookup parent from repository -->
 
 
 	</parent>
 	<groupId>Spring.Boot.Rest.Controller</groupId>
+	
 	<artifactId>SpringBootRestController</artifactId>
+	
 	<version>0.0.1-SNAPSHOT</version>
+	
 	<name>SpringBootRestController</name>
+	
 	<description>SpringBootRestController</description>
+	
+	
 	<properties>
 		<java.version>1.8</java.version>
 		<downloadSources>true</downloadSources>
 		<downloadJavadocs>true</downloadJavadocs>
-
 	</properties>
 
 	<dependencies>
@@ -98,16 +103,19 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 	<repositories>
 		<repository>
 			<id>spring-milestones</id>
 			<name>Spring Milestones</name>
 			<url>https://repo.spring.io/milestone</url>
 		</repository>
+	
 		<repository>
 			<id>spring-snapshots</id>
 			<name>Spring Snapshots</name>
 			<url>https://repo.spring.io/snapshot</url>
+			
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
