--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 logging.level.org.springframework = DEBUG
 management.endpoints.web.exposure.include=*
 management.endpoints.jmx.exposure.include=*
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+DB_CLOSE_ON_EXIT=FALSE
